--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -71,5 +71,6 @@
   "sn22.55:11.2": "Denn ein gebildeter edler Schüler sorgt sich nicht: ",
   "sn22.55:11.3": "‚Es könnte nicht sein, und es könnte nicht mein sein. Es wird nicht sein, und es wird nicht mein sein.‘ ",
   "sn22.55:11.4": "Solange Bewusstsein besteht, besteht es eingebunden in Form, getragen von Form, gegründet auf Form. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
-  "sn22.55:11.5": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Gefühl … "
+  "sn22.55:11.5": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Gefühl … ",
+  "sn22.55:11.6": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Wahrnehmung … "
 }
