--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -78,5 +78,6 @@
   "sn22.55:12.2": "‚Ich will außerhalb von Form, Gefühl, Wahrnehmung und Entscheidungen das Kommen und Gehen von Bewusstsein beschreiben, sein Sterben und Wiedererscheinen, sein Wachsen, Größerwerden und Zur-Reife-Kommen.‘ Das ist nicht möglich. ",
   "sn22.55:13.1": "Wenn ein Mönch Gier nach dem Element der Form aufgegeben hat, ist dessen Grundlage abgeschnitten, und das Bewusstsein wird nicht verankert. ",
   "sn22.55:13.2": "Wenn ein Mönch Gier nach dem Element des Gefühls aufgegeben hat … ",
-  "sn22.55:13.3": "Wenn ein Mönch Gier nach dem Element der Wahrnehmung aufgegeben hat … "
+  "sn22.55:13.3": "Wenn ein Mönch Gier nach dem Element der Wahrnehmung aufgegeben hat … ",
+  "sn22.55:13.4": "Wenn ein Mönch Gier nach dem Element der Entscheidungen aufgegeben hat … "
 }
