--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -80,5 +80,6 @@
   "sn22.55:13.2": "Wenn ein Mönch Gier nach dem Element des Gefühls aufgegeben hat … ",
   "sn22.55:13.3": "Wenn ein Mönch Gier nach dem Element der Wahrnehmung aufgegeben hat … ",
   "sn22.55:13.4": "Wenn ein Mönch Gier nach dem Element der Entscheidungen aufgegeben hat … ",
-  "sn22.55:13.5": "Wenn ein Mönch Gier nach dem Element des Bewusstseins aufgegeben hat, ist dessen Grundlage abgeschnitten, und das Bewusstsein wird nicht verankert. "
+  "sn22.55:13.5": "Wenn ein Mönch Gier nach dem Element des Bewusstseins aufgegeben hat, ist dessen Grundlage abgeschnitten, und das Bewusstsein wird nicht verankert. ",
+  "sn22.55:13.6": "Da dieses Bewusstsein nicht verankert wird und nicht wächst, ohne die Kraft, erneut zu entstehen, ist es befreit. "
 }
