--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -81,5 +81,6 @@
   "sn22.55:13.3": "Wenn ein Mönch Gier nach dem Element der Wahrnehmung aufgegeben hat … ",
   "sn22.55:13.4": "Wenn ein Mönch Gier nach dem Element der Entscheidungen aufgegeben hat … ",
   "sn22.55:13.5": "Wenn ein Mönch Gier nach dem Element des Bewusstseins aufgegeben hat, ist dessen Grundlage abgeschnitten, und das Bewusstsein wird nicht verankert. ",
-  "sn22.55:13.6": "Da dieses Bewusstsein nicht verankert wird und nicht wächst, ohne die Kraft, erneut zu entstehen, ist es befreit. "
+  "sn22.55:13.6": "Da dieses Bewusstsein nicht verankert wird und nicht wächst, ohne die Kraft, erneut zu entstehen, ist es befreit. ",
+  "sn22.55:13.7": "Wenn es befreit ist, steht es fest. Wenn es fest steht, ist es zufrieden. Wenn es zufrieden ist, ist einem nicht bange. Und wenn einem nicht bange ist, erlischt man aus sich selbst heraus. "
 }
