--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -36,7 +36,7 @@
   "sn22.55:6.4": "Er versteht Entscheidungen, die bedingt sind, nicht wahrhaftig als bedingt. ",
   "sn22.55:6.5": "Er versteht Bewusstsein, das bedingt ist, nicht wahrhaftig als bedingt. ",
   "sn22.55:6.6": "Er versteht nicht wahrhaftig, dass Form verschwinden wird. ",
-  "sn22.55:6.7": "Er versteht nicht wahrhaftig, dass Gefühl … ",
+  "sn22.55:6.7": "Er versteht nicht wahrhaftig, dass Gefühl verschwinden wird. ",
   "sn22.55:6.8": "dass Wahrnehmung … ",
   "sn22.55:6.9": "dass Entscheidungen … ",
   "sn22.55:6.10": "dass Bewusstsein verschwinden wird. ",
