--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -38,7 +38,7 @@
   "sn22.55:6.6": "Er versteht nicht wahrhaftig, dass Form verschwinden wird. ",
   "sn22.55:6.7": "Er versteht nicht wahrhaftig, dass Gefühl verschwinden wird. ",
   "sn22.55:6.8": "dass Wahrnehmung verschwinden wird. ",
-  "sn22.55:6.9": "dass Entscheidungen … ",
+  "sn22.55:6.9": "dass Entscheidungen verschwinden werden. ",
   "sn22.55:6.10": "dass Bewusstsein verschwinden wird. ",
   "sn22.55:7.1": "Aber ein gebildeter edler Schüler hat die Edlen gesehen und ist in der Lehre der Edlen bewandert und geübt. Er hat gute Menschen gesehen und ist in der Lehre der Guten bewandert und geübt. ",
   "sn22.55:7.2": "Er betrachtet nicht Form als das Selbst … ",
