Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.26_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.26_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "an10.26:2.3": "allein, indem ich Vertiefung übte, und bin zu Seligkeit erwacht. ",
   "an10.26:2.4": "Darum komme ich Menschen nicht zu nahe ",
   "an10.26:2.5": "und niemand kommt mir zu nahe.‘ ",
-  "an10.26:3.1": "Wie sollte man die ausführliche Bedeutung dieser kurzen Aussage des Buddha verstehen?“ ",
+  "an10.26:3.1": "Wie ist die ausführliche Bedeutung dieser kurzen Aussage des Buddha zu verstehen?“ ",
   "an10.26:4.1": "„Schwester, manche Asketen und Brahmanen betrachten den Meditationszustand über die allumfassende Erde als das Höchste. Im Gedanken: ‚Das ist das Ziel‘ werden sie wiedergeboren. ",
   "an10.26:4.2": "Der Buddha erkannte unmittelbar, inwieweit der Meditationszustand über die allumfassende Erde das Höchste ist. ",
   "an10.26:4.3": "Indem er das unmittelbar erkannte, sah er die vorteilhaften und die nachteiligen Folgen und das Entrinnen. Und er sah das Erkennen und Sehen der Vielfalt der Wege. ",
