--- a/translation/de/sabbamitta/sutta/an/an10/an10.26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.26_translation-de-sabbamitta.json
@@ -26,7 +26,7 @@
   "an10.26:5.9": "oder über das allumfassende Bewusstsein als das Höchste. Im Gedanken: ‚Das ist das Ziel‘ werden sie wiedergeboren. ",
   "an10.26:5.10": "Der Buddha erkannte unmittelbar, inwieweit der Meditationszustand über das allumfassende Bewusstsein das Höchste ist. ",
   "an10.26:5.11": "Indem er das unmittelbar erkannte, sah er die vorteilhaften und die nachteiligen Folgen und das Entrinnen. Und er sah das Erkennen und Sehen der Vielfalt der Wege. ",
-  "an10.26:5.12": "Weil er die vorteilhaften und die nachteiligen Folgen und das Entrinnen sah, und weil er das Erkennen und Sehen der Vielfalt der Wege sah, wusste er, dass er das Ziel erreicht hatte, den Herzensfrieden. ",
+  "an10.26:5.12": "Weil er die vorteilhaften und die nachteiligen Folgen und das Entrinnen sah, und weil er das Erkennen und Sehen der Vielfalt der Wege sah, wusste er, dass er das Ziel, den Herzensfrieden, erreicht hatte. ",
   "an10.26:5.13": "Das, Schwester, ist die ausführliche Bedeutung der kurzen Aussage des Buddha in den ‚Fragen der Mädchen‘: ",
   "an10.26:6.1": "‚Das Ziel hab ich erreicht, den Herzensfrieden. ",
   "an10.26:6.2": "Das Heer des Erwünschten und Angenehmen habe ich besiegt, ",
