Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -87,7 +87,7 @@
   "dn33:1.9.33": "Ergriffenheit und angemessenes Bemühen, wenn man von einem ergreifenden Ort ergriffen ist. ",
   "dn33:1.9.34": "Sich niemals mit den tauglichen Eigenschaften zufriedengeben und niemals aufgeben. ",
   "dn33:1.9.35": "Wissen und Freiheit. ",
-  "dn33:1.9.36": "Erkenntnis des Endens und Erkenntnis des Nicht-Entstehens. ",
+  "dn33:1.9.36": "Erkennen der Auflösung und Erkennen des Nicht-Entstehens. ",
   "dn33:1.9.37": "Das sind die Lehren, die zu Zweiergruppen zusammengestellt sind, die vom Buddha richtig erklärt wurden. ",
   "dn33:1.9.38": "Ihr solltet sie alle im Chor aufsagen. ",
   "dn33:1.10.0": "3. Dreier ",
