Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
@@ -52,7 +52,7 @@
   "dn34:1.3.21": "Welches die Gründe und Anlässe für die Verunreinigung der Lebewesen sind und welches die Gründe und Anlässe für die Läuterung der Lebewesen sind. ",
   "dn34:1.3.23": "Welche zwei Dinge müssen erzeugt werden? ",
   "dn34:1.3.24": "Zwei Erkenntnisse: ",
-  "dn34:1.3.25": "Erkenntnis des Endens und Erkenntnis des Nicht-Entstehens. ",
+  "dn34:1.3.25": "Erkennen der Auflösung und Erkennen des Nicht-Entstehens. ",
   "dn34:1.3.27": "Welche zwei Dinge müssen unmittelbar erkannt werden? ",
   "dn34:1.3.28": "Zwei Elemente: ",
   "dn34:1.3.29": "das bedingte Element und das unbedingte Element. ",
