Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
@@ -131,7 +131,7 @@
   "dn6:17.8": "‚Aber, werte Freunde, ich erkenne und sehe so. ",
   "dn6:17.9": "Dennoch sage ich nicht: ",
   "dn6:17.10": "„Seele und Körper sind dasselbe“ oder „Seele und Körper sind verschiedene Dinge“. … ",
-  "dn6:18.1": "Er lenkt und richtet seinen Geist auf das Erkennen und Sehen … ",
+  "dn6:18.1": "Er streckt seinen Geist aus und richtet ihn auf das Erkennen und Sehen … ",
   "dn6:18.2": "Wenn ein Mönch so erkennt und sieht, wäre es da angebracht, von ihm zu sagen: ",
   "dn6:18.3": "„Seele und Körper sind dasselbe“ oder „Seele und Körper sind verschiedene Dinge“?‘ ",
   "dn6:18.5": "‚Das wäre es, werter Freund.‘ ",
