--- a/translation/de/sabbamitta/sutta/dn/dn22_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn22_translation-de-sabbamitta.json
@@ -277,7 +277,7 @@
   "dn22:19.60": "Gedanken über Gedanken erscheinen in der Welt hübsch und angenehm, und da entsteht dieses Verlangen und setzt sich fest. ",
   "dn22:19.61": "Erwägungen über Bilder … ",
   "dn22:19.62": "Erwägungen über Töne … ",
-  "dn22:19.63": "Betrachtungen über Düfte … ",
+  "dn22:19.63": "Erwägungen über Düfte … ",
   "dn22:19.64": "Betrachtungen über Geschmäcke … ",
   "dn22:19.65": "Betrachtungen über Berührungen … ",
   "dn22:19.66": "Betrachtungen über Gedanken erscheinen in der Welt hübsch und angenehm, und da entsteht dieses Verlangen und setzt sich fest. ",
