--- a/translation/de/sabbamitta/sutta/dn/dn22_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn22_translation-de-sabbamitta.json
@@ -279,7 +279,7 @@
   "dn22:19.62": "Erwägungen über Töne … ",
   "dn22:19.63": "Erwägungen über Düfte … ",
   "dn22:19.64": "Erwägungen über Geschmäcke … ",
-  "dn22:19.65": "Betrachtungen über Berührungen … ",
+  "dn22:19.65": "Erwägungen über Berührungen … ",
   "dn22:19.66": "Betrachtungen über Gedanken erscheinen in der Welt hübsch und angenehm, und da entsteht dieses Verlangen und setzt sich fest. ",
   "dn22:19.67": "Das nennt man die edle Wahrheit vom Ursprung des Leidens. ",
   "dn22:20.0": "4.5.3. Die Wahrheit vom Aufhören ",
