Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn22_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn22_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn22_translation-de-sabbamitta.json
@@ -289,7 +289,7 @@
   "dn22:20.4": "Bei allem, was in der Welt hübsch und angenehm erscheint, da wird dieses Verlangen aufgegeben und hört auf. ",
   "dn22:20.5": "Und was erscheint in der Welt hübsch und angenehm? ",
   "dn22:20.6": "Das Auge erscheint in der Welt hübsch und angenehm, und da wird dieses Verlangen aufgegeben und hört auf. … ",
-  "dn22:20.65": "Betrachtungen über Gedanken erscheinen in der Welt hübsch und angenehm, und da wird dieses Verlangen aufgegeben und hört auf. ",
+  "dn22:20.65": "Erwägungen über Gedanken erscheinen in der Welt hübsch und angenehm, und da wird dieses Verlangen aufgegeben und hört auf. ",
   "dn22:20.66": "Das nennt man die edle Wahrheit vom Aufhören des Leidens. ",
   "dn22:21.0": "4.5.4. Die Wahrheit vom Pfad ",
   "dn22:21.1": "Und was ist die edle Wahrheit von der Übung, die zum Aufhören des Leidens führt? ",
