Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -1,5 +1,6 @@
 {
   "dhp146:0.1": "Collection of Minor Texts",
   "dhp146:0.2": "Verses of Dhamma",
-  "dhp146:0.3": "Chapter on Decay"
+  "dhp146:0.3": "Chapter on Decay",
+  "dhp146:1": "Who can laugh, who can delight,"
 }
