Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -4,5 +4,6 @@
   "dhp146:0.3": "Chapter on Decay",
   "dhp146:1": "Who can laugh, who can delight,",
   "dhp146:2": "since this is always on fire?",
-  "dhp146:3": "Obscured by darkness,"
+  "dhp146:3": "Obscured by darkness,",
+  "dhp146:4": "you do not seek for light."
 }
