--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -5,5 +5,6 @@
   "dhp146:1": "Who can laugh, who can delight,",
   "dhp146:2": "since this is always on fire?",
   "dhp146:3": "Obscured by darkness,",
-  "dhp146:4": "you do not search for light."
+  "dhp146:4": "you do not search for light.",
+  "dhp147:1": "See that the mind has been made like a puppet:"
 }
