Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -6,5 +6,5 @@
   "dhp146:2": "since this is always on fire?",
   "dhp146:3": "Obscured by darkness,",
   "dhp146:4": "you do not search for light.",
-  "dhp147:1": "See that the mind has been made like a puppet:"
+  "dhp147:1": "See that the mind has been made a puppet:"
 }
