Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -9,5 +9,6 @@
   "dhp147:1": "See that the mind has been made a puppet,",
   "dhp147:2": "blighted by arrogance,",
   "dhp147:3": "diseased by excessive thought,",
-  "dhp147:4": "lacking stability and composure."
+  "dhp147:4": "lacking stability and composure.",
+  "dhp148:1": "This body is completely decrepit,"
 }
