--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -8,7 +8,7 @@
   "dhp146:4": "you do not search for light.",
   "dhp147:1": "See that the mind has been made a puppet,",
   "dhp147:2": "damaged with arrogance,",
-  "dhp147:3": "diseased by excessive thought,",
+  "dhp147:3": "afflicted with excessive thought,",
   "dhp147:4": "lacking stability and composure.",
   "dhp148:1": "This body is completely decrepit,"
 }
