--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -10,5 +10,6 @@
   "dhp147:2": "damaged with arrogance,",
   "dhp147:3": "afflicted with excessive thought,",
   "dhp147:4": "lacking stability and composure.",
-  "dhp148:1": "This body is decrepit,"
+  "dhp148:1": "This body is decrepit,",
+  "dhp148:2": "fragile, a nest of disease."
 }
