Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -12,5 +12,6 @@
   "dhp147:4": "lacking stability and composure.",
   "dhp148:1": "This body is decrepit,",
   "dhp148:2": "fragile, a nest of disease,",
-  "dhp148:3": "a putrid heap that falls apart,"
+  "dhp148:3": "a putrid heap that falls apart,",
+  "dhp148:4": "since life ends in death."
 }
