--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -13,5 +13,6 @@
   "dhp148:1": "This body is decrepit,",
   "dhp148:2": "fragile, a nest of disease,",
   "dhp148:3": "a putrid heap that falls apart,",
-  "dhp148:4": "since life ends in death."
+  "dhp148:4": "since life ends in death.",
+  "dhp149:1": "Thrown out,"
 }
