Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -14,6 +14,6 @@
   "dhp148:2": "fragile, a nest of disease,",
   "dhp148:3": "a putrid heap that falls apart,",
   "dhp148:4": "since life ends in death.",
-  "dhp149:1": "Thrown out,",
+  "dhp149:1": "Like gourds discarded in autumn,",
   "dhp149:2": "like gourds in autumn,"
 }
