--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -15,5 +15,6 @@
   "dhp148:3": "a putrid heap that falls apart,",
   "dhp148:4": "since life ends in death.",
   "dhp149:1": "Like gourds discarded in autumn,",
-  "dhp149:2": "like gourds in autumn,"
+  "dhp149:2": "like gourds in autumn,",
+  "dhp149:3": "when seeing these faded bones"
 }
