--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -17,5 +17,6 @@
   "dhp149:1": "Set aside",
   "dhp149:2": "like gourds in autumn -",
   "dhp149:3": "when seeing these faded bones,",
-  "dhp149:4": "what delight can there be?"
+  "dhp149:4": "what delight can there be?",
+  "dhp150:1": "Like a city made of bones,"
 }
