Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -19,5 +19,6 @@
   "dhp149:3": "when seeing these faded bones,",
   "dhp149:4": "what delight can there be?",
   "dhp150:1": "Like a city made of bones,",
-  "dhp150:2": "wrapped in meat and blood,"
+  "dhp150:2": "wrapped in meat and blood,",
+  "dhp150:3": "a place of decay and death,"
 }
