Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -21,5 +21,6 @@
   "dhp150:1": "Like a city made of bones,",
   "dhp150:2": "wrapped in meat and blood,",
   "dhp150:3": "a place of decay and death,",
-  "dhp150:4": "conceit and contempt."
+  "dhp150:4": "conceit and contempt.",
+  "dhp151:1": "Even magnificent royal chariots wear out;"
 }
