Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -22,5 +22,6 @@
   "dhp150:2": "wrapped in meat and blood,",
   "dhp150:3": "a place of decay and death,",
   "dhp150:4": "conceit and contempt.",
-  "dhp151:1": "Even magnificent royal chariots wear out;"
+  "dhp151:1": "Even magnificent royal chariots wear out;",
+  "dhp151:2": "so too, this body decays."
 }
