--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -23,5 +23,6 @@
   "dhp150:3": "a place of decay and death,",
   "dhp150:4": "conceit and contempt.",
   "dhp151:1": "Even magnificent royal chariots wear out;",
-  "dhp151:2": "so too, this body decays."
+  "dhp151:2": "so too, this body decays.",
+  "dhp151:3": "But the true Dhamma never decays:"
 }
