Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -25,5 +25,5 @@
   "dhp151:1": "Even magnificent royal chariots wear out;",
   "dhp151:2": "so too, this body decays.",
   "dhp151:3": "But the true Dhamma never decays:",
-  "dhp151:4": "it is made known by those who are peaceful and virtuous."
+  "dhp151:4": "it is made known by those who are peaceful and virtuous"
 }
