Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -28,5 +28,6 @@
   "dhp151:4": "it is made known by those who are peaceful and virtuous.",
   "dhp152:1": "A person who has learned little",
   "dhp152:2": "grows up like an ox:",
-  "dhp152:3": "their muscles grow"
+  "dhp152:3": "their muscles grow",
+  "dhp152:4": "but their wisdom does not."
 }
