Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -29,5 +29,6 @@
   "dhp152:1": "A person who has learned little",
   "dhp152:2": "ages like an ox:",
   "dhp152:3": "their muscles grow",
-  "dhp152:4": "but their wisdom does not."
+  "dhp152:4": "but their wisdom does not.",
+  "dhp153:1": "Wandering through many lives,"
 }
