Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -30,5 +30,6 @@
   "dhp152:2": "ages like an ox:",
   "dhp152:3": "their muscles grow",
   "dhp152:4": "but their wisdom does not.",
-  "dhp153:1": "Wandering through many lives,"
+  "dhp153:1": "Wandering through many lives,",
+  "dhp153:2": "seeking but not finding"
 }
