--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -31,5 +31,6 @@
   "dhp152:3": "their muscles grow",
   "dhp152:4": "but their wisdom does not.",
   "dhp153:1": "Wandering through many lives,",
-  "dhp153:2": "seeking but not finding"
+  "dhp153:2": "seeking but not finding",
+  "dhp153:3": "the builder of this house -"
 }
