--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.2_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn12.2:0.1": "Verbundene Lehrreden 12.2 ",
   "sn12.2:0.2": "1. Das Kapitel über die Buddhas ",
-  "sn12.2:0.3": "2. Aufgliederung ",
+  "sn12.2:0.3": "Aufgliederung ",
   "sn12.2:1.1": "In Sāvatthī. ",
   "sn12.2:1.2": "„Mönche und Nonnen, ich werde euch das abhängige Entstehen darlegen und aufgliedern. ",
   "sn12.2:1.3": "Hört zu und passt gut auf, ich werde sprechen.“ ",
