--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.4_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn12.4:0.1": "Verbundene Lehrreden 12.4 ",
   "sn12.4:0.2": "1. Das Kapitel über die Buddhas ",
-  "sn12.4:0.3": "4. Über Vipassī ",
+  "sn12.4:0.3": "Über Vipassī ",
   "sn12.4:1.1": "In Sāvatthī. ",
   "sn12.4:1.2": "„Mönche und Nonnen, Vipassī der Gesegnete, der Vollendete, der vollkommen erwachte Buddha hatte diesen Gedanken, bevor er erwachte, als er noch nicht erwacht war, aber zum Erwachen entschlossen: ",
   "sn12.4:1.3": "‚Ach, diese Welt ist in Schwierigkeiten. Sie wird geboren, wird alt, stirbt, scheidet ab und wird wiedergeboren, ",
