Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -32,5 +32,6 @@
   "dhp152:4": "but their wisdom does not.",
   "dhp153:1": "Wandering through many lives,",
   "dhp153:2": "seeking but not finding",
-  "dhp153:3": "the builder of this house -"
+  "dhp153:3": "the builder of this house -",
+  "dhp153:4": "repeatedly experiencing the suffering of birth."
 }
