--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -33,5 +33,6 @@
   "dhp153:1": "Wandering through many lives,",
   "dhp153:2": "seeking but not finding",
   "dhp153:3": "the builder of this house -",
-  "dhp153:4": "repeatedly experiencing the suffering of birth."
+  "dhp153:4": "repeatedly experiencing the suffering of birth.",
+  "dhp154:1": "House-builder, you have been seen!"
 }
