Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -34,5 +34,6 @@
   "dhp153:2": "seeking but not finding",
   "dhp153:3": "the builder of this house -",
   "dhp153:4": "repeatedly experiencing the suffering of birth.",
-  "dhp154:1": "House-builder, you have been seen!"
+  "dhp154:1": "House-builder, you have been seen!",
+  "dhp154:2": "You will build no house again."
 }
