--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -23,5 +23,6 @@
   "mn3:2.14": "‘કઇ રીતે સાધકો ધર્મમાં મારા વારસદાર બને, માલમિલ્કતમાં નહીં’.",
   "mn3:3.1": "ઘારોકે, ભિક્ષુઓ, મેં ખાધું હોય અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું હોય;",
   "mn3:3.2": "અને મારી પાસે ભિક્ષાન્ન વધ્યુ હોય જે ફેંકી દેવાનું હોય.",
-  "mn3:3.3": "અને બે સખત ભૂખને લીધે દુર્બળ થઇ ગયેલા ભિક્ષુઓ આવે."
+  "mn3:3.3": "અને બે સખત ભૂખને લીધે દુર્બળ થઇ ગયેલા ભિક્ષુઓ આવે.",
+  "mn3:3.4": "એમને હું કહું:"
 }
