Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -37,5 +37,6 @@
   "dhp154:1": "House-builder, you have been seen!",
   "dhp154:2": "You will build no house again.",
   "dhp154:3": "All your rafters are broken,",
-  "dhp154:4": "the roof-peak dismantled."
+  "dhp154:4": "the roof-peak dismantled.",
+  "dhp154:5": "The mind has gone to the unconditioned -"
 }
