Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -39,5 +39,6 @@
   "dhp154:3": "All your rafters are broken,",
   "dhp154:4": "the roof-peak dismantled.",
   "dhp154:5": "The mind has gone to the unconditioned -",
-  "dhp154:6": "the elimination of craving has been reached."
+  "dhp154:6": "the elimination of craving has been reached.",
+  "dhp155:1": "Those who have not lived the spiritual life,"
 }
