Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -25,5 +25,6 @@
   "mn3:3.2": "અને મારી પાસે ભિક્ષાન્ન વધ્યુ હોય જે ફેંકી દેવાનું હોય.",
   "mn3:3.3": "અને બે સખત ભૂખને લીધે દુર્બળ થઇ ગયેલા ભિક્ષુઓ આવે.",
   "mn3:3.4": "એમને હું કહું:",
-  "mn3:3.5": "ભિક્ષુઓ, મેં ખાધું છે અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું છે;"
+  "mn3:3.5": "ભિક્ષુઓ, મેં ખાધું છે અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું છે;",
+  "mn3:3.6": "અને મારી પાસે ભિક્ષાન્ન વધ્યુ છે જે ફેંકી દેવાનું છે."
 }
