--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -40,6 +40,6 @@
   "dhp154:4": "the roof-peak dismantled.",
   "dhp154:5": "The mind has gone to the unconditioned -",
   "dhp154:6": "the elimination of craving has been reached.",
-  "dhp155:1": "Those who have not lived the spiritual life,",
+  "dhp155:1": "Those who have neither lived a spiritual life,",
   "dhp155:2": "and have not acquired wealth when young,"
 }
