--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -41,5 +41,5 @@
   "dhp154:5": "The mind has gone to the unconditioned -",
   "dhp154:6": "the elimination of craving has been reached.",
   "dhp155:1": "Those who have neither lived a spiritual life,",
-  "dhp155:2": "and have not acquired wealth when young,"
+  "dhp155:2": "nor acquired wealth when young,"
 }
