Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -42,5 +42,6 @@
   "dhp154:6": "the elimination of craving has been reached.",
   "dhp155:1": "Those who have neither lived a spiritual life",
   "dhp155:2": "nor acquired wealth during their youth,",
-  "dhp155:3": "Waste away like old herons"
+  "dhp155:3": "Waste away like old herons",
+  "dhp155:4": "by a fishless pond."
 }
