Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp146-156_translation-en-suddhaso.json
@@ -46,5 +46,6 @@
   "dhp155:4": "by a fishless pond.",
   "dhp156:1": "Those who have neither lived a spiritual life",
   "dhp156:2": "nor acquired wealth during their youth,",
-  "dhp156:3": "lay around like wasted arrows,"
+  "dhp156:3": "lay around like wasted arrows,",
+  "dhp156:4": "lamenting the past."
 }
