--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.10_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn12.10:0.1": "Verbundene Lehrreden 12.10 ",
   "sn12.10:0.2": "1. Das Kapitel über die Buddhas ",
-  "sn12.10:0.3": "10. Gotama ",
+  "sn12.10:0.3": "Gotama ",
   "sn12.10:1.1": "„Mönche und Nonnen, vor meinem Erwachen, als ich noch nicht erwacht war, aber zum Erwachen entschlossen, dachte ich: ",
   "sn12.10:1.2": "‚Ach, diese Welt ist in Schwierigkeiten. Sie wird geboren, wird alt, stirbt, scheidet ab und wird wiedergeboren, ",
   "sn12.10:1.3": "doch sie versteht nicht, wie sie diesem Leiden entrinnen kann, dem Alter und dem Tod. ",
