--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.12_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.12_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn12.12:0.1": "Verbundene Lehrreden 12.12 ",
   "sn12.12:0.2": "2. Das Kapitel über Nahrung ",
-  "sn12.12:0.3": "12. Phagguna mit dem Scheitelknoten ",
+  "sn12.12:0.3": "Phagguna mit dem Scheitelknoten ",
   "sn12.12:1.1": "In Sāvatthī. ",
   "sn12.12:1.2": "„Mönche und Nonnen, es gibt vier Arten von Nahrung. Sie erhalten Lebewesen, die geboren sind, und helfen denen, die gerade geboren werden. ",
   "sn12.12:1.3": "Welche vier? ",
