--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -26,5 +26,6 @@
   "mn3:3.3": "અને બે સખત ભૂખને લીધે દુર્બળ થઇ ગયેલા ભિક્ષુઓ આવે.",
   "mn3:3.4": "એમને હું કહું:",
   "mn3:3.5": "ભિક્ષુઓ, મેં ખાધું છે અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું છે;",
-  "mn3:3.6": "અને મારી પાસે ભિક્ષાન્ન વધ્યુ છે જે ફેંકી દેવાનું છે."
+  "mn3:3.6": "અને મારી પાસે ભિક્ષાન્ન વધ્યુ છે જે ફેંકી દેવાનું છે.",
+  "mn3:3.7": "જો ઇચ્છા હોય તો ખાઓ. જો તમે નહી ખાઓ તો હું એને વેરાન જગ્યામાં નાખી દઇશ અથવા જ્યાં કોઇ પણ જીવજંતુઓ ના હોય એવા પાણીમાં ફેંકી દઇશ’."
 }
