--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.16_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn12.16:0.1": "Verbundene Lehrreden 12.16 ",
   "sn12.16:0.2": "2. Das Kapitel über Nahrung ",
-  "sn12.16:0.3": "16. Ein Dhammalehrer ",
+  "sn12.16:0.3": "Ein Dhammalehrer ",
   "sn12.16:1.1": "In Sāvatthī. ",
   "sn12.16:1.2": "Da ging ein Mönch zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
   "sn12.16:1.3": "„Herr, man spricht von einem ‚Dhammalehrer‘. ",
