--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.18_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.18_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn12.18:0.1": "Verbundene Lehrreden 12.18 ",
   "sn12.18:0.2": "2. Das Kapitel über Nahrung ",
-  "sn12.18:0.3": "18. Mit Timbaruka ",
+  "sn12.18:0.3": "Mit Timbaruka ",
   "sn12.18:1.1": "In Sāvatthī. ",
   "sn12.18:1.2": "Da ging der Wanderer Timbaruka zum Buddha und tauschte Willkommensgrüße mit ihm aus. ",
   "sn12.18:1.3": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin und sagte zum Buddha: ",
