--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.23_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn12.23:0.1": "Verbundene Lehrreden 12.23 ",
   "sn12.23:0.2": "3. Das Kapitel über die zehn Kräfte ",
-  "sn12.23:0.3": "23. Wesentliche Bedingungen ",
+  "sn12.23:0.3": "Wesentliche Bedingungen ",
   "sn12.23:1.1": "In Sāvatthī. ",
   "sn12.23:1.2": "„Mönche und Nonnen, ich sage, dass die Befleckungen für jemanden aufgelöst werden, der erkennt und sieht, nicht für jemanden, der nicht erkennt und nicht sieht. ",
   "sn12.23:1.3": "Für jemanden, der was erkennt und sieht? ",
