--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.24_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.24_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn12.24:0.1": "Verbundene Lehrreden 12.24 ",
   "sn12.24:0.2": "3. Das Kapitel über die zehn Kräfte ",
-  "sn12.24:0.3": "24. Anhänger anderer Lehren ",
+  "sn12.24:0.3": "Anhänger anderer Lehren ",
   "sn12.24:1.1": "Bei Rājagaha, im Bambuswäldchen. ",
   "sn12.24:1.2": "Da kleidete sich der ehrwürdige Sāriputta am Morgen an, nahm Schale und Robe und betrat Rājagaha zum Almosengang. ",
   "sn12.24:1.3": "Da kam ihm in den Sinn: ",
