--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.25_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.25_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn12.25:0.1": "Verbundene Lehrreden 12.25 ",
   "sn12.25:0.2": "3. Das Kapitel über die zehn Kräfte ",
-  "sn12.25:0.3": "25. Mit Bhūmija ",
+  "sn12.25:0.3": "Mit Bhūmija ",
   "sn12.25:1.1": "In Sāvatthī. ",
   "sn12.25:1.2": "Da kam der Ehrwürdige Bhūmija am späten Nachmittag aus seiner Klausur, ging zum Ehrwürdigen Sāriputta und tauschte Willkommensgrüße mit ihm aus. ",
   "sn12.25:1.3": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin und sagte zu ihm: ",
