--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.28_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.28_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn12.28:0.1": "Verbundene Lehrreden 12.28 ",
   "sn12.28:0.2": "3. Das Kapitel über die zehn Kräfte ",
-  "sn12.28:0.3": "Mönch oder Nonne ",
+  "sn12.28:0.3": "Ein Mönch ",
   "sn12.28:1.1": "In Sāvatthī. ",
   "sn12.28:1.2": " ",
   "sn12.28:1.3": "„Eine Nonne oder ein Mönch versteht Alter und Tod, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt. Er oder sie versteht Wiedergeburt … ",
