Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -342,7 +342,7 @@
   "sn-name:341.sn12.25": "Mit Bhūmija ",
   "sn-name:342.sn12.26": "Mit Upavāṇa ",
   "sn-name:343.sn12.27": "Bedingungen ",
-  "sn-name:344.sn12.28": "Mönch oder Nonne ",
+  "sn-name:344.sn12.28": "Ein Mönch ",
   "sn-name:345.sn12.29": "Asketen und Brahmanen ",
   "sn-name:346.sn12.30": "Asketen und Brahmanen (2) ",
   "sn-name:347.sn12-kalarakhattiyavagga": "Das Kapitel mit Kaḷāra dem Adligen ",
