--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.28_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.28_translation-de-sabbamitta.json
@@ -51,7 +51,7 @@
   "sn12.28:5.7": "die sechs Sinnesfelder … ",
   "sn12.28:5.8": "Name und Form … ",
   "sn12.28:5.9": "Bewusstsein … ",
-  "sn12.28:5.10": "Er oder sie versteht Entscheidungen, ",
+  "sn12.28:5.10": "Er versteht Entscheidungen, ",
   "sn12.28:5.11": "ihren Ursprung, ",
   "sn12.28:5.12": "ihr Aufhören ",
   "sn12.28:5.13": "und die Übung, die zu ihrem Aufhören führt. ",
