--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.31_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn12.31:0.1": "Verbundene Lehrreden 12.31 ",
   "sn12.31:0.2": "4. Das Kapitel mit Kaḷāra dem Adligen ",
-  "sn12.31:0.3": "31. Das Entstandene ",
+  "sn12.31:0.3": "Das Entstandene ",
   "sn12.31:1.1": "Einmal hielt sich der Buddha bei Sāvatthī auf. ",
   "sn12.31:1.2": "Da sagte der Buddha zum Ehrwürdigen Sāriputta: ",
   "sn12.31:1.3": "„Sāriputta, im ‚Weg zum Jenseits‘, in ‚Ajitas Fragen‘, heißt es: ",
