--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.67_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn12.67:0.1": "Verbundene Lehrreden 12.67 ",
   "sn12.67:0.2": "7. Das große Kapitel ",
-  "sn12.67:0.3": "67. Schilfbündel ",
+  "sn12.67:0.3": "Schilfbündel ",
   "sn12.67:1.1": "Einmal hielten sich der Ehrwürdige Sāriputta und der Ehrwürdige Mahākoṭṭhita bei Benares auf, im Wildpark bei Isipatana. ",
   "sn12.67:1.2": "Da kam der Ehrwürdige Mahākoṭṭhita am späten Nachmittag aus seiner Klausur, ging zum Ehrwürdigen Sāriputta und tauschte Willkommensgrüße mit ihm aus. ",
   "sn12.67:1.3": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin und sagte zu Sāriputta: ",
