--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.93-213_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.93-213_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "sn12.93-103:0.1": "Verbundene Lehrreden 12 ",
+  "sn12.93-103:0.1": "Verbundene Lehrreden 12.93-213 ",
   "sn12.93-103:0.2": "9. Die Reihe mit internen Abkürzungen ",
   "sn12.93-103:0.3": "93-213. Elferreihen über Schulung usw. ",
   "sn12.93-103:1.1": "„Mönche und Nonnen, wer Alter und Tod nicht wirklich erkennt und sieht, sollte sich schulen, um Alter und Tod wirklich zu erkennen. … ",
