--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.28_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.28_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn35.28:0.1": "Verbundene Lehrreden 35.28 ",
   "sn35.28:0.2": "3. Das Kapitel über Alles ",
-  "sn35.28:0.3": "28. Brennen ",
+  "sn35.28:0.3": "Brennen ",
   "sn35.28:1.1": "Einmal hielt sich der Buddha zusammen mit tausend Mönchen und Nonnen bei Gayā auf dem Gayā-Kopf auf. ",
   "sn35.28:1.2": "Da wandte sich der Buddha an die Mönche und Nonnen: ",
   "sn35.28:1.3": "„Mönche und Nonnen, alles brennt. ",
