--- a/translation/de/sabbamitta/sutta/sn/sn47/sn47.63-72_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn47/sn47.63-72_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "sn47.63-72:0.1": "Verbundene Lehrreden 47 ",
+  "sn47.63-72:0.1": "Verbundene Lehrreden 47.63-72 ",
   "sn47.63-72:0.2": "7. Das Kapitel über Beflissenheit ",
   "sn47.63-72:0.3": "63.–72. Der Klargewordene ",
   "sn47.63-72:1.1": "„Mönche und Nonnen, der Klargewordene, der Vollendete, der vollkommen erwachte Buddha gilt als das beste unter allen Lebewesen: den Wesen ohne Füße, den Zweibeinern, den Vierbeinern, den Vielfüßigen …“ ",
