--- a/translation/de/sabbamitta/sutta/sn/sn47/sn47.85-94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn47/sn47.85-94_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "sn47.85-94:0.1": "Verbundene Lehrreden 47 ",
+  "sn47.85-94:0.1": "Verbundene Lehrreden 47.85-94 ",
   "sn47.85-94:0.2": "9. Das Kapitel über Arten der Suche ",
   "sn47.85-94:0.3": "Arten der Suche usw. ",
   "sn47.85-94:1.1": "„Mönche und Nonnen, es gibt diese drei Arten der Suche. ",
