--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -28,5 +28,6 @@
   "mn3:3.5": "ભિક્ષુઓ, મેં ખાધું છે અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું છે;",
   "mn3:3.6": "અને મારી પાસે ભિક્ષાન્ન વધ્યુ છે જે ફેંકી દેવાનું છે.",
   "mn3:3.7": "જો ઇચ્છા હોય તો ખાઓ. જો તમે નહી ખાઓ તો હું એને વેરાન જગ્યામાં નાખી દઇશ અથવા જ્યાં કોઇ પણ જીવજંતુઓ ના હોય એવા પાણીમાં ફેંકી દઇશ’.",
-  "mn3:3.8": "તો એક ભિક્ષુના મનમાં એવો વિચાર આવ્યો:"
+  "mn3:3.8": "તો એક ભિક્ષુના મનમાં એવો વિચાર આવ્યો:",
+  "mn3:3.9": "‘ભગવંતે ખાધું છે અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું છે;"
 }
