--- a/translation/de/sabbamitta/sutta/sn/sn16/sn16.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn16/sn16.5_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "sn16.5:5.2": "‚Hoffentlich folgen die, die nachkommen, meinem Beispiel.‘ ",
   "sn16.5:5.3": "Denn sie könnten denken: ‚Es scheint, die erwachten Schüler des Buddha lebten lange in der Wildnis, aßen nur Almosen, trugen Fetzenroben und besaßen nur drei Roben; und sie priesen diese Dinge. Sie waren genügsam, zufrieden, lebten abgeschieden, hielten sich fern und waren energisch; und sie priesen diese Dinge.‘ ",
   "sn16.5:5.12": "Sie werden entsprechend üben, und das wird zu ihrem langanhaltenden Nutzen und Glück sein. ",
-  "sn16.5:6.1": "Diese beiden Gründe habe ich gesehen, dass ich diese Dinge so lange geübt habe.“ ",
+  "sn16.5:6.1": "Diese beiden Vorteile habe ich gesehen, dass ich diese Dinge so lange geübt habe.“ ",
   "sn16.5:7.1": "„Gut, gut, Kassapa! ",
   "sn16.5:7.2": "Du handelst zum Nutzen und Glück vieler Menschen, aus Anteilnahme für die Welt, zum Vorteil, Nutzen und Glück von Göttern und Menschen. ",
   "sn16.5:7.3": "Daher, Kassapa, trage abgetragene hanfene Fetzenroben, wandere um Almosen und lebe in der Wildnis.“ "
