--- a/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
@@ -60,7 +60,7 @@
   "an2.31:1.1": "„Zwei Dinge spielen für das Klarwerden eine Rolle. ",
   "an2.31:1.2": "Welche beiden? ",
   "an2.31:1.3": "Sammlung und Klarsicht. ",
-  "an2.31:1.4": "Welchen Nutzen hat die Entwicklung von Sammlung? ",
+  "an2.31:1.4": "Welchen Vorteil hat die Entwicklung von Sammlung? ",
   "an2.31:1.5": "Der Geist entfaltet sich. ",
   "an2.31:1.6": "Welchen Nutzen hat es, den Geist zu entfalten? ",
   "an2.31:1.7": "Man legt die Gier ab. ",
