--- a/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
@@ -62,7 +62,7 @@
   "an2.31:1.3": "Sammlung und Klarsicht. ",
   "an2.31:1.4": "Welchen Vorteil hat die Entwicklung von Sammlung? ",
   "an2.31:1.5": "Der Geist entfaltet sich. ",
-  "an2.31:1.6": "Welchen Nutzen hat es, den Geist zu entfalten? ",
+  "an2.31:1.6": "Welchen Vorteil hat es, den Geist zu entfalten? ",
   "an2.31:1.7": "Man legt die Gier ab. ",
   "an2.31:1.8": "Welchen Nutzen hat die Entwicklung von Klarsicht? ",
   "an2.31:1.9": "Weisheit entfaltet sich. ",
