--- a/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
@@ -64,7 +64,7 @@
   "an2.31:1.5": "Der Geist entfaltet sich. ",
   "an2.31:1.6": "Welchen Vorteil hat es, den Geist zu entfalten? ",
   "an2.31:1.7": "Man legt die Gier ab. ",
-  "an2.31:1.8": "Welchen Nutzen hat die Entwicklung von Klarsicht? ",
+  "an2.31:1.8": "Welchen Vorteil hat die Entwicklung von Klarsicht? ",
   "an2.31:1.9": "Weisheit entfaltet sich. ",
   "an2.31:1.10": "Welchen Nutzen hat es, Weisheit zu entfalten? ",
   "an2.31:1.11": "Man legt die Unwissenheit ab. ",
