Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
@@ -66,7 +66,7 @@
   "an2.31:1.7": "Man legt die Gier ab. ",
   "an2.31:1.8": "Welchen Vorteil hat die Entwicklung von Klarsicht? ",
   "an2.31:1.9": "Weisheit entfaltet sich. ",
-  "an2.31:1.10": "Welchen Nutzen hat es, Weisheit zu entfalten? ",
+  "an2.31:1.10": "Welchen Vorteil hat es, Weisheit zu entfalten? ",
   "an2.31:1.11": "Man legt die Unwissenheit ab. ",
   "an2.31:1.12": "Wenn der Geist von Gier verunreinigt ist, ist er nicht frei; und wenn Weisheit von Unwissenheit verunreinigt ist, nimmt sie nicht zu. ",
   "an2.31:1.13": "So entsteht die Freiheit des Herzens aus dem Schwinden der Gier, und die Freiheit durch Weisheit entsteht aus dem Schwinden der Unwissenheit.“ "
