Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn3/sn3.17_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn3/sn3.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn3/sn3.17_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "sn3.17:2.1": "„Das gibt es, großer König.“ ",
   "sn3.17:3.1": "„Und was ist dieses eine Ding?“ ",
   "sn3.17:4.1": "„Beflissenheit, großer König, ist ein Ding, ",
-  "sn3.17:4.2": "das Nutzen sowohl in diesem als auch in künftigen Leben sichert. ",
+  "sn3.17:4.2": "das Vorteile sowohl in diesem als auch in künftigen Leben sichert. ",
   "sn3.17:4.3": "Die Fußspuren aller Lebewesen, die laufen, passen in die Fußspur eines Elefanten hinein. Daher gilt die Fußspur des Elefanten als die größte von allen. ",
   "sn3.17:4.4": "Ebenso ist Beflissenheit ein Ding, ",
   "sn3.17:4.5": "das Nutzen sowohl in diesem als auch in künftigen Leben sichert.“ ",
