Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn3/sn3.17_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn3/sn3.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn3/sn3.17_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "sn3.17:4.2": "das Vorteile sowohl in diesem als auch in künftigen Leben sichert. ",
   "sn3.17:4.3": "Die Fußspuren aller Lebewesen, die laufen, passen in die Fußspur eines Elefanten hinein. Daher gilt die Fußspur des Elefanten als die größte von allen. ",
   "sn3.17:4.4": "Ebenso ist Beflissenheit ein Ding, ",
-  "sn3.17:4.5": "das Nutzen sowohl in diesem als auch in künftigen Leben sichert.“ ",
+  "sn3.17:4.5": "das Vorteile sowohl in diesem als auch in künftigen Leben sichert.“ ",
   "sn3.17:4.6": "Das sagte der Buddha. … ",
   "sn3.17:5.1": "„Wer einen stetigen Fluss ",
   "sn3.17:5.2": "außergewöhnlichen Vergnügens begehrt – ",
