Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thag/thag21.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thag/thag21.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag21.1_translation-de-sabbamitta.json
@@ -195,7 +195,7 @@
   "thag21.1:47.4": "und ich zog fort ins hauslose Leben. ",
   "thag21.1:48.1": "Es ist wahrlich zum Vorteil Vieler, ",
   "thag21.1:48.2": "dass die Klargewordenen erscheinen – ",
-  "thag21.1:48.3": "zum Nutzen der Frauen und Männer, ",
+  "thag21.1:48.3": "zum Vorteil der Frauen und Männer, ",
   "thag21.1:48.4": "die ihren Anweisungen folgen. ",
   "thag21.1:49.1": "Es war wahrlich zu ihrem Nutzen, ",
   "thag21.1:49.2": "dass der Abgeklärte das Erwachen erreichte – ",
