Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thag/thag21.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thag/thag21.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag21.1_translation-de-sabbamitta.json
@@ -197,7 +197,7 @@
   "thag21.1:48.2": "dass die Klargewordenen erscheinen – ",
   "thag21.1:48.3": "zum Vorteil der Frauen und Männer, ",
   "thag21.1:48.4": "die ihren Anweisungen folgen. ",
-  "thag21.1:49.1": "Es war wahrlich zu ihrem Nutzen, ",
+  "thag21.1:49.1": "Es war wahrlich zu ihrem Vorteil, ",
   "thag21.1:49.2": "dass der Abgeklärte das Erwachen erreichte – ",
   "thag21.1:49.3": "zum Nutzen der Mönche und Nonnen, ",
   "thag21.1:49.4": "die sehen, dass sie Sicherheit erlangt haben. ",
