Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -43,7 +43,7 @@
   "an1.91:1.2": "Korrekte Aufmerksamkeit ist überaus vorteilhaft.“ ",
   "an1.91:1.3": " ",
   "an1.92:1.0": "92 ",
-  "an1.92:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus schädlich ist wie mangelnde Umsicht. ",
+  "an1.92:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus nachteilig ist wie mangelnde Umsicht. ",
   "an1.92:1.2": "Mangelnde Umsicht ist überaus schädlich.“ ",
   "an1.92:1.3": " ",
   "an1.93:1.0": "93 ",
