Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.82-97_translation-de-sabbamitta.json
@@ -55,7 +55,7 @@
   "an1.94:1.2": "Schlechte Freunde sind überaus schädlich.“ ",
   "an1.94:1.3": " ",
   "an1.95:1.0": "95 ",
-  "an1.95:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus vorteilhaft ist wie gute Freunde. ",
+  "an1.95:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das so überaus segensreich ist wie gute Freunde. ",
   "an1.95:1.2": "Gute Freunde sind überaus vorteilhaft.“ ",
   "an1.95:1.3": " ",
   "an1.96:1.0": "96 ",
